--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^7.2",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-backup": "^9.1",
         "spatie/laravel-permission": "^6.10",
