--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "laravel-echo": "^1.17.1",
     "pusher-js": "^8.4.0-rc2"
+  },
+  "dependencies": {
+    "react-apexcharts": "^1.7.0"
   }
 }
