--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,10 +23,39 @@
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@left4code/tw-starter": "^3.1.36",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.2.3",
     "@yudiel/react-qr-scanner": "^2.1.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.1",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
     "dropzone": "^6.0.0-beta.2",
     "embla-carousel-autoplay": "^8.5.2",
@@ -61,6 +90,7 @@
     "react-toastify": "^11.0.3",
     "react-transition-group": "^4.4.5",
     "simplebar": "^6.2.5",
+    "sonner": "^2.0.7",
     "tabulator-tables": "^5.5.2",
     "tiny-slider": "^2.9.4",
     "tippy.js": "^6.3.7",
